dev/compute/connectivity/storage.yaml
apiVersion: v1
kind: Service
metadata:
    name: longlink-storage-local
    namespace: rustfs
spec:
    type: NodePort
    externalTrafficPolicy: Local
    selector:
        app.kubernetes.io/name: longlink-storage
    ports:
        - name: https
          port: 9443
          nodePort: 30943
          targetPort: https
          protocol: TCP
